--- a/style.css
+++ b/style.css
@@ -23,7 +23,8 @@ h1 {
 
 .content-wrapper {
   flex: 1;
-  padding: 20px;
+  padding: 80px;
+  text-align: center;
 }
 
 .opaque-bg {
@@ -58,12 +59,13 @@ h1 {
 img {
   max-width: 100%;
   height: auto;
-  border-radius: 10px;
+  border-radius: 60px;
+  text-align: left;
 }
 
 p {
   font-size: 20px;
-  color: #484848;
+  color: #1b046d;
 }
 
 .section {
