--- a/style.css
+++ b/style.css
@@ -118,7 +118,7 @@ nav.sticky .menu-btn{
 .home{
   height: 100vh;
   width: 100%;
-  background: url("https://github.com/Shikamaru77/Shikamaru77.github.io/blob/e02f7025aff857a5bb43594a6c7ae3f188f14ab5/Images/bg.png") no-repeat;
+  background: url("Images/bg.png") no-repeat;
   background-size: cover;
   background-position: center;
   background-attachment: fixed;
