--- a/style.css
+++ b/style.css
@@ -118,7 +118,7 @@ nav.sticky .menu-btn{
 .home{
   height: 100vh;
   width: 100%;
-  background: url("Images/bg.png") no-repeat;
+  background-image: url("Images/bg.png") no-repeat;
   background-size: cover;
   background-position: center;
   background-attachment: fixed;
