--- a/style.css
+++ b/style.css
@@ -63,7 +63,7 @@ nav .navbar .menu li{
 .navbar .menu a{
   font-size: 18px;
   font-weight: 500;
-  color: #877F7F;
+  color: #f5f5f5;
   padding: 6px 0;
   transition: all 0.4s ease;
 }
@@ -118,7 +118,7 @@ nav.sticky .menu-btn{
 .home{
   height: 100vh;
   width: 100%;
-  background-image: url("Images/bg.png") no-repeat;
+  background: url("Images/black.png") no-repeat;
   background-size: cover;
   background-position: center;
   background-attachment: fixed;
