--- a/style.css
+++ b/style.css
@@ -38,7 +38,7 @@ nav{
   font-family: 'Ubuntu', sans-serif;
 }
 nav.sticky{
-  background: #353A47;
+  background: linear-gradient(45deg, #212432, #1F1D23);
   padding: 13px 0;
 }
 nav .navbar{
@@ -118,7 +118,8 @@ nav .menu-btn,
   display: none;
 }
 nav .menu-btn{
-  color: #081539;
+  color: rgb(11, 142, 70);
+
 }
 nav.sticky .menu-btn{
   color: #FFF;
@@ -157,13 +158,20 @@ nav.sticky .menu-btn{
   color:   #14bd2b
 }
 .home .text-two{
-  color: #877F7F;
+  font-weight: 500;
+  font-size: 35px;
+  color: #9E9B9C;
+  background: linear-gradient(45deg, #0b280d, #1be314);
+  background-clip: text;
+  -webkit-background-clip: text;
+  color: transparent;
   font-size: 75px;
   font-weight: 600;
   margin-left: -3px;
 }
 .home .text-three {
-  font-size: 23px;
+  font-size: 1
+  px;
   font-weight: 450;
   margin: 5px 0;
   color: #ffffff;
@@ -200,15 +208,18 @@ nav.sticky .menu-btn{
   display: inline-block;
   padding: 10px 20px;
   background-color: #877F7F;
-  color: #fff;
+  color: #ffffff;
   text-decoration: none;
   border-radius: 5px;
   font-weight: bold;
   transition: background-color 0.3s ease;
+  
 }
 
 .hire-button:hover {
-  background-color: #0e6013;
+  background: linear-gradient(45deg, #08280a, #0e5f0b);
+  background-clip: text;
+  color: #fff;
   transform: scale(1.1);
 }
 
@@ -315,8 +326,8 @@ section .button button:hover{
 
 .download-button:hover {
   border-color: #3b3c3e;
-  background-color: #fff;
-  color: #000101;}
+  background: linear-gradient(45deg, #1c3245, #1F1D23);
+  color: #ffffff;}
 
  /* My Skills CSS */
 
@@ -338,10 +349,27 @@ section .button button:hover{
   line-height: 2.2;
 }
 
-.skills-details p{
-  color: #0e3116;
+.skills-details p {
+  color: #1F1D23;
   text-align: justify;
+  line-height: 1.5em;
 }
+
+.skills-details a {
+  text-decoration: dotted;
+  line-height: 1.5em;
+  color: inherit; /* To remove the default blue color */
+}
+
+.skills-details a:hover {
+  color: #108a3f; /* Color when hovering over the link */
+}
+
+.skills-details a:visited {
+  color: inherit;
+}
+
+
 .skills .skills-details .experience{
  display: flex;
  align-items: center;
@@ -375,6 +403,9 @@ section .button button:hover{
 .skills-details .boxes .per{
  font-size: 30px;
  color: #4d6012;
+}
+.skills-details .topic .text{
+text-decoration: none;
 }
 
 /* My Services CSS */
@@ -450,9 +481,47 @@ services .topic {
 .services .boxes .box:hover p{
   color: #fff;
 }
+/*achievements*/
+.ach{
+  background: #f4f4f4;
+}
+.ach .content{
+  padding: 40px 0;
+}
+.ach .ach-details{
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+.ach-details .text{
+  color:  #000000;
+  width: 100%;
+  line-height: 2.2;
+}
+
+.ach-details p {
+  color: #1F1D23;
+  text-align: justify;
+  line-height: 1.5em;
+}
+
+.ach-details a {
+  text-decoration: dotted;
+  line-height: 1.5em;
+  color: inherit; /* To remove the default blue color */
+}
+
+.ach-details a:hover {
+  color: #108a3f; /* Color when hovering over the link */
+}
+
+.ach-details a:visited {
+  color: inherit;
+}
+
 /* Contact Me CSS */
 .contact{
-  background: #F0F8FF;
+  background: #988F90;
 }
 .contact .content{
   margin: 0 auto;
@@ -467,7 +536,7 @@ services .topic {
 
 /* Footer CSS */
 footer{
-  background: #3B3C4A;
+  background: linear-gradient(45deg, #212432, #1F1D23);
   padding: 15px 0;
   text-align: center;
   font-family: 'Poppins', sans-serif;
@@ -497,7 +566,6 @@ footer .text span a:hover{
   box-shadow: rgba(0, 0, 0, 0.15);
   display: none;
 }
-
 /* Responsive Media Query */
 @media (max-width: 1190px) {
   section .content{
@@ -538,7 +606,7 @@ footer .text span a:hover{
     position: fixed;
     left: -100%;
     top: 0;
-    background: #0E2431;
+    background: linear-gradient(45deg, #1c3245, #1F1D23);
     height: 100vh;
     max-width: 400px;
     width: 100%;
@@ -557,7 +625,7 @@ footer .text span a:hover{
     margin: 10px 0;
   }
   nav.sticky .menu a:hover{
-    color: #9E9B9C;
+    color: #1F1D23;
   }
   nav .navbar .media-icons{
     display: none;
@@ -567,12 +635,12 @@ footer .text span a:hover{
     display: block;
   }
   .home .text-two{
-    font-size: 65px;
+    font-size: 75px;
   }
   .home .text-three{
-    font-size: 35px;
+    font-size: 18px;
   }
-  .skills.skills-details{
+  .skills .skills-details{
     align-items: center;
     justify-content: center;
     flex-direction: column;
@@ -603,7 +671,7 @@ footer .text span a:hover{
     font-size: 33px;
   }
   .skills-details .boxes .per{
-    font-size: 0px;
-    color: #4070f4;
+    font-size: 50px;
+    color: #c91f0c;
   }
 }
