--- a/style.css
+++ b/style.css
@@ -639,6 +639,7 @@ footer .text span a:hover{
   }
   .home .text-three{
     font-size: 13px;
+    font-weight:200;
   }
   .skills .skills-details{
     align-items: center;
