--- a/style.css
+++ b/style.css
@@ -437,9 +437,19 @@ services .topic {
 }
 .services .boxes .box:hover{
   background: #0E2431;
-  color: #fff;
+  color: #f9f9f9;
 }
 
+.services .boxes .box .topic20{
+  color: rgb(5, 108, 60);
+  text-align: center; 
+  font-size: 17px; 
+  font-weight: bold; 
+  line-height: 1.5;
+}
+.services .boxes .box .topic20:hover{
+color :rgb(255, 255, 255);
+}
 .services .boxes .box .topic a{
   color: inherit;
 }
